--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
              </div>
           </div>
         </section>
-        <section id="contact" class="contacts">
+        <section id="contacto" class="contacts">
           <div class="content-wrap">
             <h2 class="section-desplegable">Información de contacto</h2>
             <div class="section-content">
