--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a href="#habilidades">Habilidades <span class="fa fa-code" aria-hidden="true"></span>
           </a>
           <a href="#educacion">Educación </a>
-          <a href="#coontacto">Contacto</a>
+          <a href="#contacto">Contacto</a>
         </nav>
         <div id="sobre-mi" class="content-wrap">
           <img class="profile-img col-narrow" src="images/profile.jpeg" alt="Zoey Ellis">
